--- a/src/components/common/Button/styles.scss
+++ b/src/components/common/Button/styles.scss
@@ -10,7 +10,8 @@
   padding: 0 20px;
   min-width: 80px;
 
-  font-size: 14px;
+  font-size: 16px;
+  font-weight: 600;
 
   display: inline-flex;
   justify-content: center;
@@ -36,8 +37,8 @@
 
   &--outline {
     border: $default-border-primary;
-    border-color: $color-secondary;
-    color: $color-secondary;
+    border-color: $color-primary;
+    color: $color-primary;
     background-color: transparent;
     transition: all 0.2s linear;
 
