style(Button): update border-radius

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -117,6 +117,7 @@ $default-transition-med: all 0.2s ease-in-out;
 $default-linear-trans: all 0.1s linear;
 $default-linear-trans-med: all 0.2s linear;
 $default-border-radius: 8px;
+$default-border-radius-button: 999px;
 
 $navbar-height: 4rem;
 $footer-height: $navbar-height;
