--- a/src/components/common/Button/styles.scss
+++ b/src/components/common/Button/styles.scss
@@ -3,7 +3,7 @@
 
 .cmp-button {
   height: $button-normal;
-  border-radius: $default-border-radius;
+  border-radius: $default-border-radius-button;
   background-color: $color-primary;
   color: $color-white;
   border: none;
@@ -249,7 +249,7 @@
       display: block;
       width: 100%;
       height: 100%;
-      border-radius: $default-border-radius;
+      border-radius: $default-border-radius-button;
       box-shadow: 0 0 0 0 rgba($color-primary, 1);
       transform: scale(1);
       animation: pulse-navbar 1s forwards;
