--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -10,13 +10,13 @@
   --background: #f7f8fa;
   --gray: #aaaeb2;
   --gray-light: #a8a8a8;
-  --link: #337ab7;
+  --link: #f05122;
   --link-dark: #2a5cb1;
 }
 
 // Custom Bulma Color
 $primary: #f05122;
-$link: #337ab7;
+$link: #f05122;
 $success: #3dbc59;
 $warning: #f4762f;
 $danger: #ee2d2d;
@@ -139,7 +139,7 @@ $secondary-container-width: 1100px;
 
 $default-shadow: 0px 4px 20px rgba(224, 224, 224, 0.5);
 
-$focus-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(18, 94, 53, 0.6);
+$focus-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(240, 81, 34, 0.6);
 $error-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(218, 92, 92, 0.6);
 
 $sidebar-bg-color: #fff;
