feat(web-app): Homepage, course, view course detail

--- a/src/components/Navbar/styles.scss
+++ b/src/components/Navbar/styles.scss
@@ -38,6 +38,10 @@
     flex-direction: row;
     margin: 0 36px;
     justify-content: space-between;
+
+    @include mobileScreen {
+      margin: 0 16px;
+    }
   }
 
   &__start {
