--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -45,6 +45,15 @@ $fontFizes: 12, 14, 16, 18, 20, 22, 24, 32, 36, 40, 56;
   }
 }
 
+// radius size
+$radiusSizes: 4, 8, 16, 24, 32, 64;
+
+@each $size in $radiusSizes {
+  .border-radius-#{$size} {
+    border-radius: #{$size}px;
+  }
+}
+
 // font weight
 .fw-normal {
   font-weight: $font-weight-regular;
