--- a/src/containers/UAMContainer/Signin/styles.scss
+++ b/src/containers/UAMContainer/Signin/styles.scss
@@ -12,7 +12,7 @@
     padding: 0 16px;
   }
 
-  &__logo {
+  &__logoImage {
     height: 100px;
     object-fit: contain;
     margin-bottom: 20px;
