--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -144,15 +144,17 @@ label {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #f5f5f5;
+  background-color: transparent;
   border-radius: 0;
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 8px;
+  height: 8px;
+  border-radius: 0;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #9e9e9e70;
-  border-radius: 0;
+  background-color: rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
