--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -158,3 +158,13 @@ label {
   background-color: rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
+
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
