--- a/src/components/common/Select/styles.scss
+++ b/src/components/common/Select/styles.scss
@@ -15,16 +15,15 @@
       font-size: $body-size;
 
       &--is-disabled {
-        background-color: $color-border;
+        background-color: $color-white;
       }
 
-      &:hover {
-        border-color: $color-border;
+      &:focus {
+        border-color: $color-primary;
+        border-width: 2px;
       }
-
-      &--is-focused {
-        border-color: $color-border;
-        box-shadow: $focus-shadow;
+      &:hover:not(:focus) {
+        border: 1px solid rgba(0, 0, 0, 0.5);
       }
     }
 
@@ -56,8 +55,9 @@
     }
 
     &__menu {
-      border-radius: 0px;
+      border-radius: 4px;
       z-index: 101;
+      border: $default-border;
     }
 
     &__menu-list {
@@ -65,6 +65,7 @@
     }
 
     &__option {
+      height: 40px;
       font-size: 14px;
       padding-left: 16px;
       padding-right: 16px;
